objects/AOPS_Account_Master__c.object
<CustomObject>
    <fields>
        <fullName>CXTF000P_ACCT_TYPE__c</fullName>
        <label>CXTF000P_ACCT_TYPE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF000P_ACTION__c</fullName>
        <label>CXTF000P_ACTION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF000P_AOPS_KEY1__c</fullName>
        <label>CXTF000P AOPS KEY1</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF000P_EXT_CUSTOMER__c</fullName>
        <label>CXTF000P_EXT_CUSTOMER</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF000P_MSG_TYPE__c</fullName>
        <label>CXTF000P MSG TYPE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF000P_SFDC_KEY1__c</fullName>
        <label>CXTF000P SFDC KEY1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF000P_STATUS_CHANGE__c</fullName>
        <label>CXTF000P_STATUS_CHANGE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTF000P_TIMESTAMP__c</fullName>
        <label>CXTF000P_TIMESTAMP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_ADDL_ADDR_IND__c</fullName>
        <label>FCU000P_ADDL_ADDR_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_ADDL_PHONE_CONT_IND__c</fullName>
        <label>FCU000P_ADDL_PHONE_CONT_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_ADDRESS_SEQ__c</fullName>
        <label>FCU000P_ADDRESS_SEQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_ADDR_COMM_IND__c</fullName>
        <label>FCU000P_ADDR_COMM_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_ADDR_HOURS_IND__c</fullName>
        <label>FCU000P_ADDR_HOURS_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_ADV_CHK_APP_FLAG__c</fullName>
        <label>FCU000P_ADV_CHK_APP_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_AFFILIATION_CODE__c</fullName>
        <label>FCU000P_AFFILIATION_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_ASSOCIATION_CODE__c</fullName>
        <label>FCU000P_ASSOCIATION_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_AUTO_SALES__c</fullName>
        <label>FCU000P_AUTO_SALES</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_BLOCK_DAILY_SPC__c</fullName>
        <label>FCU000P_BLOCK_DAILY_SPC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_BO_IND__c</fullName>
        <label>FCU000P_BO_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_BRAND__c</fullName>
        <label>FCU000P_BRAND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_BUSINESS_NAME__c</fullName>
        <label>FCU000P_BUSINESS_NAME</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_CANADIAN_TAXABLE_CODE__c</fullName>
        <label>FCU000P_CANADIAN_TAXABLE_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_CATALOG_TYPE__c</fullName>
        <label>FCU000P_CATALOG_TYPE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_CITY__c</fullName>
        <label>FCU000P_CITY</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_CONTACT_NAME__c</fullName>
        <label>FCU000P_CONTACT_NAME</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_CONT_RETAIL_CODE__c</fullName>
        <label>FCU000P_CONT_RETAIL_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_COUNTRY_CODE__c</fullName>
        <label>FCU000P_COUNTRY_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_CREATE_DATE__c</fullName>
        <label>FCU000P_CREATE_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_CREATE_ID__c</fullName>
        <label>FCU000P_CREATE_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_CREDIT_IND__c</fullName>
        <label>FCU000P_CREDIT_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_CUSTOMER_ID__c</fullName>
        <externalId>true</externalId>
        <label>FCU000P_CUSTOMER_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_CUST_COMM_IND__c</fullName>
        <label>FCU000P_CUST_COMM_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_CUST_DEMO_IND__c</fullName>
        <label>FCU000P_CUST_DEMO_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_CUST_SUBTYPE__c</fullName>
        <label>FCU000P_CUST_SUBTYPE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_CUST_TYPE__c</fullName>
        <label>FCU000P_CUST_TYPE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_DATE_STS_MOD__c</fullName>
        <label>FCU000P_DATE_STS_MOD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_DEAL_REST_FLAG__c</fullName>
        <label>FCU000P_DEAL_REST_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_DELETE_FLAG__c</fullName>
        <label>FCU000P_DELETE_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_DUNS_NBR__c</fullName>
        <label>FCU000P_DUNS_NBR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_EMPLOYER_ID__c</fullName>
        <label>FCU000P_EMPLOYER_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_FAMILY_TYPE__c</fullName>
        <label>FCU000P_FAMILY_TYPE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_GEO_CODE__c</fullName>
        <label>FCU000P_GEO_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_GRAY_LETTER_FLAG__c</fullName>
        <label>FCU000P_GRAY_LETTER_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_HANDLING_FLAG__c</fullName>
        <label>FCU000P_HANDLING_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_HLD_RTN_IND__c</fullName>
        <label>FCU000P_HLD_RTN_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_LESS_EMAIL_FLAG__c</fullName>
        <label>FCU000P_LESS_EMAIL_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_LESS_FAX_FLAG__c</fullName>
        <label>FCU000P_LESS_FAX_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_LESS_MAIL_FLAG__c</fullName>
        <label>FCU000P_LESS_MAIL_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_LESS_PHONE_FLAG__c</fullName>
        <label>FCU000P_LESS_PHONE_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_OUTSIDE_CITY_FLAG__c</fullName>
        <label>FCU000P_OUTSIDE_CITY_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_PHONE_CONT_SEQ__c</fullName>
        <label>FCU000P_PHONE_CONT_SEQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_POLYBAG_FLAG__c</fullName>
        <label>FCU000P_POLYBAG_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_PO_IND__c</fullName>
        <label>FCU000P_PO_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_PO_REQ_OVER_AMT__c</fullName>
        <label>FCU000P_PO_REQ_OVER_AMT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_PRES_NAME_IND__c</fullName>
        <label>FCU000P_PRES_NAME_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_PRIMARY_EXTENSION__c</fullName>
        <label>FCU000P_PRIMARY_EXTENSION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_PRIMARY_PHONE__c</fullName>
        <label>FCU000P_PRIMARY_PHONE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_PRIVATE_SALE_FLAG__c</fullName>
        <label>FCU000P_PRIVATE_SALE_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_PROVINCE__c</fullName>
        <label>FCU000P_PROVINCE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_RCV_DELINQ_LETTER__c</fullName>
        <label>FCU000P_RCV_DELINQ_LETTER</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_REBATE_CODE__c</fullName>
        <label>FCU000P_REBATE_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_RENT_NAME_FLAG__c</fullName>
        <label>FCU000P_RENT_NAME_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_RESERVED_SPACE__c</fullName>
        <label>FCU000P_RESERVED_SPACE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_RSV_10CHAR__c</fullName>
        <label>FCU000P_RSV_10CHAR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_RSV_10V2__c</fullName>
        <label>FCU000P_RSV_10V2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_RSV_1CHAR_1__c</fullName>
        <label>FCU000P_RSV_1CHAR_1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_RSV_1CHAR_2__c</fullName>
        <label>FCU000P_RSV_1CHAR_2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_RSV_2CHAR_1__c</fullName>
        <label>FCU000P_RSV_2CHAR_1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_SALUTATION__c</fullName>
        <label>FCU000P_SALUTATION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_SIC_CODE__c</fullName>
        <label>FCU000P_SIC_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_STATE__c</fullName>
        <label>FCU000P_STATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_STREET_ADDRESS1__c</fullName>
        <label>FCU000P_STREET_ADDRESS1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_STREET_ADDRESS2__c</fullName>
        <label>FCU000P_STREET_ADDRESS2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_TAX_CERTIF_IND__c</fullName>
        <label>FCU000P_TAX_CERTIF_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_TAX_EXEMPT_TYPE__c</fullName>
        <label>FCU000P_TAX_EXEMPT_TYPE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_TIME_STAMP__c</fullName>
        <label>FCU000P_TIME_STAMP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_TITLE_IND__c</fullName>
        <label>FCU000P_TITLE_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_TSR_ID__c</fullName>
        <label>FCU000P_TSR_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_VISIT_FREQUENCY__c</fullName>
        <label>FCU000P_VISIT_FREQUENCY</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU000P_ZIP__c</fullName>
        <label>FCU000P_ZIP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attempts__c</fullName>
        <label>Number_Of_Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Status_Message__c</fullName>
        <externalId>true</externalId>
        <label>Sync Status Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Record ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AOPS Account Master</label>
    <nameField>
        <label>AOPS Account Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AOPS Account Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>